[package]
name = "rtc-quebec-gtfs-rt"
version = "0.3.0"
edition = "2024"
license="AGPL-3.0"
description = "A GTFS-RT client for RTC Ville de Québec"

[dependencies]
chrono = "0.4.41"
chrono-tz = "0.10.4"
futures = "0.3.31"
gtfs-realtime = "0.2.0"
gtfs-structures = "0.45.1"
iso8601 = "0.6.3"
rand = "0.9.2"
reqwest = "0.12.22"
serde = "1.0.219"
serde_json = "1.0.141"

[dev-dependencies]
tokio = { version = "1.46.1", features = ["full"] }
