[package]
name = "rtc-quebec-gtfs-rt"
version = "0.5.0"
edition = "2024"
license="AGPL-3.0"
description = "Une bibliothèque GTFS-RT pour RTC Ville de Québec"

[dependencies]
chrono = "0.4"
chrono-tz = "0.10"
futures = "0.3"
gtfs-realtime = "0.2.0"
gtfs-structures = "0.47.0"
iso8601 = "0.6.3"
rand = "0.9"
reqwest = {version = "0.13", features = ["query"]}
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.48", features = ["full"] }
